--- a/media1.html
+++ b/media1.html
@@ -14,14 +14,14 @@
         <summary>Season 1</summary>
         <p>Episode1</p>
         <video controls width="400">
-        <source src="./Media/video.mp4" >
+        <source src="./video.mp4" >
         </video>
 
     <details>
         <summary>Season 2</summary>
         <p>Episode1</p>
           <video controls width="400">
-        <source src="./Media/video2.mp4">
+        <source src="./video2.mp4">
         </video>
 
     
