--- a/media1.html
+++ b/media1.html
@@ -13,14 +13,14 @@
     <details>
         <summary>Season 1</summary>
         <p>Episode1</p>
-        <video controls width="400">
+        <video controls width="400" autoplay muted loop>
         <source src="./video.mp4" >
         </video>
 
     <details>
         <summary>Season 2</summary>
         <p>Episode1</p>
-          <video controls width="400">
+          <video controls width="400" autoplay muted loop>
         <source src="./video2.mp4">
         </video>
 
